# ESMValTool

./: .codacy.yml  .dockerignore  .editorconfig  .gitignore  .gitmodules  .lycheeignore  .pre-commit-config.yaml  .prospector.yml  .pylintrc  .readthedocs.yaml  .stickler.yml  .yamllint  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  MANIFEST.in  NOTICE  PYTEST.txt  README  README.md  README.txt  RELEASE_NOTES  SECURITY.md  TERMS_OF_USE  TODO4DELIVERABLE  build.sh  conda-lock.yml  conda-requirements.txt  conda_build_config.yaml  conf.py  config-user-example.yml  config-user.yml  config-user_EG_levante.yml  config_morobking.yml  config_private.xml  config_private_DLR-PA2.xml  config_private_template.xml  (+35 more)
.circleci/: Dockerfile  config.yml  install_triggers
.codacy/: cli.sh  codacy.yaml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
ESMValTool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
R/: install_r_dependencies.py  r_requirements.txt
backend/: cmor_check.py  preprocessor.py  regrid.py  run_test.py  variable_definition.py  variable_info.py
diag_scripts/: AutoAssess_radiation_rms.py  CarbonCycle_2vars.ncl  CarbonCycle_MVI.ncl  CarbonCycle_main.ncl  DiurnalCycle_box.ncl  DiurnalCycle_precip_harmonic.ncl  Emmons.ncl  Evapotranspiration.ncl  GO_comp_map.ncl  GO_tsline.ncl  MyDiag.ncl  SAMonsoon_precip_IAV.ncl  SAMonsoon_precip_basic.ncl  SAMonsoon_precip_daily.ncl  SAMonsoon_precip_domain.ncl  SAMonsoon_precip_propagation.ncl  SAMonsoon_precip_seasonal.ncl  SAMonsoon_teleconnections.ncl  SAMonsoon_wind_IAV.ncl  SAMonsoon_wind_basic.ncl  SAMonsoon_wind_seasonal.ncl  SPI.r  SeaIce_ancyc.ncl  SeaIce_polcon.ncl  SeaIce_polcon_diff.ncl  SeaIce_tsline.ncl  SouthernHemisphere.py  SouthernHemisphere_scatter.py  SouthernOcean_areamean_vertconplot.ncl  SouthernOcean_polcon.ncl  SouthernOcean_polcon_diff.ncl  SouthernOcean_transport.ncl  SouthernOcean_vector_polcon_diff.ncl  TropicalVariability.py  TropicalVariability_EQ.py  TropicalVariability_wind.py  WAMonsoon_10W10E_1D_basic.ncl  WAMonsoon_10W10E_3D_basic.ncl  WAMonsoon_autocorr.ncl  WAMonsoon_contour_basic.ncl  (+68 more)
doc/: .gitignore  ESMValTool_control_flow.txt  MASTER_authors-refs-acknow.txt  RELEASE_NOTES  test-setup.md
docker/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.exp  docker_guide.md
esmvalcore/: __init__.py  _config.py  _main.py  _recipe.py  _recipe_checks.py  _task.py  _version.py  config-developer.yml  config-user.yml  recipe_schema.yml
esmvaltool/: .gitignore  ESMValTool_v2_Conda_Channel_Install.txt  Makefile  NCEP-NCAR-R1.yml  __init__.py  _config.py  _data_finder.py  _fxvar.py  _main.py  _namelist.py  _provenance.py  _recipe.py  _recipe_checks.py  _task.py  _version.py  broken2.sh  config-AR.yml  config-BM.yml  config-developer.yml  config-logging.yml  config-references.yml  config-reformat-file.yml  config-user-extremetest.yml  config-user.yml  config-user_MISTRAL.yml  config-user_MISTRAL_bh.yml  config-user_MO.yml  config-user_PA2.yml  config-user_example.yml  config.ini  config.yml  config_example.ini  config_example.yml  config_private.xml  data_finder.py  important_renamings.txt  logging.yml  main.py  namelist.py  namelist_helper.txt  (+9 more)
interface_data/: .gitignore
interface_scripts/: auxiliary.ncl  auxiliary.py  constants.ncl  data_handling.ncl  diagdef.py  esgf_config.py  esgf_search.py  folder.py  launchers.py  messaging.ncl  model.py  nml_tags.py  projects.py  reformat.py  tag.py  write_header.ncl  xml_parsers.py  yaml_parser.py
namelists/: experimental_namelist_perfmetrics.yml  namelist_MyVar.yml  namelist_perfmetrics_CMIP5.yml  namelist_perfmetrics_CMIP5_short.yml  namelist_preprocessor_test.yml
nml/: .gitignore  namelist_AutoAssess_radiation_rms_Amon_all.xml  namelist_AutoAssess_radiation_rms_Amon_obs.xml  namelist_AutoAssess_radiation_rms_cfMon_all.xml  namelist_CVDP.xml  namelist_CVDP.yaml  namelist_DiurnalCycle_box_SFCflux.xml  namelist_DiurnalCycle_box_SFCflux.yaml  namelist_DiurnalCycle_box_SFCflux.yml  namelist_DiurnalCycle_box_TOAflux.xml  namelist_DiurnalCycle_box_TOAflux.yaml  namelist_DiurnalCycle_box_TOAflux.yml  namelist_DiurnalCycle_box_pr.xml  namelist_DiurnalCycle_box_pr.yaml  namelist_DiurnalCycle_harmonic.xml  namelist_DiurnalCycle_harmonic.yaml  namelist_Emmons.xml  namelist_Emmons.yaml  namelist_Evapotranspiration.xml  namelist_Evapotranspiration.yaml  namelist_GlobalOcean.xml  namelist_GlobalOcean.yaml  namelist_LMU_for_tests.xml  namelist_MyDiag.xml  namelist_SAMonsoon.xml  namelist_SAMonsoon.yaml  namelist_SAMonsoon_AMIP.xml  namelist_SAMonsoon_AMIP.yaml  namelist_SAMonsoon_daily.xml  namelist_SAMonsoon_daily.yml  namelist_SPI.xml  namelist_SeaIce.xml  namelist_SeaIce.yml  namelist_SouthernHemisphere.xml  namelist_SouthernOcean.xml  namelist_SouthernOcean.yml  namelist_TropicalVariability.xml  namelist_WAMonsoon.xml  namelist_WAMonsoon_daily.xml  namelist_WAMonsoon_daily.yml  (+57 more)
orchestrator/: .gitignore  Makefile  README.txt  RELEASE_NOTES.txt  config.ini  config_example.ini  important_renamings.txt  logging.yml  main.py  pytest.ini  standing_issues.txt
package/: install-julia-deps.sh  install-r-deps.sh  meta.yaml
reformat_scripts/: .gitignore  constants.ncl
reporting/: main_report.py
source_install_linux_artifacts_python_/: conda_version.txt  python_version.txt  version.txt
tests/: __init__.py  conftest.py  esmvaltool_testlib.py  find_all_pytests.py  parse_pymon.py  run_test.py  run_tests.py  test_esmval_testlib.py  test_launchers.py  test_model.py  test_projects.py  test_template.py  wrappers.py
variable_defs/: .gitignore  CSOIL.ncl  LW_CRE.ncl  MyVar.ncl  NBP.ncl  O2_onelev.ncl  SW_CRE.ncl  alb.ncl  baresoilFrac.ncl  cSoil.ncl  clcci.ncl  clhmtcci.ncl  clhmtisccp.ncl  clhtkcci.ncl  clhtkisccp.ncl  clhtncci.ncl  clhtnisccp.ncl  clisccp.ncl  cllmtcci.ncl  cllmtisccp.ncl  clltkcci.ncl  clltkisccp.ncl  clltncci.ncl  clltnisccp.ncl  clmmtcci.ncl  clmmtisccp.ncl  clmtkcci.ncl  clmtkisccp.ncl  clmtncci.ncl  clmtnisccp.ncl  clt-max.ncl  cltcci.ncl  (+48 more)
(+7503 files in other folders)
